--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
+    <!-- Import Clover SDK to use Clover iframe features -->
+    <script src="https://checkout.sandbox.dev.clover.com/sdk.js"></script>
+    <!-- Import Google Font -->
+    <link href="https://fonts.googleapis.com/css?family=Inter:400,700&display=swap" rel="stylesheet">
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Google Fonts -->
@@ -36,8 +39,6 @@
     <title>React App</title>
   </head>
   <body>
-    <!-- Import Clover SDK to use Clover iframe features -->
-    <script src="https://checkout.sandbox.dev.clover.com/sdk.js"></script>
     <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <!-- Bootstrap tooltips -->
